--- a/config/storage.yml
+++ b/config/storage.yml
@@ -9,10 +9,12 @@
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
  amazon:
    service: S3
-   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-   region: us-east-1
-   bucket: your_own_bucket
+   #AKIASWCQ4SXSEFC2B5OA
+   access_key_id: AKIASWCQ4SXSEFC2B5OA
+   #xg44KszIuP7uBniTpPfOyDjOefZkpZ73YMB9zCqE
+   secret_access_key: xg44KszIuP7uBniTpPfOyDjOefZkpZ73YMB9zCqE
+   region: eu-central-1
+   bucket: prostogrambucket-<%= Rails.env %>
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
