--- a/config/storage.yml
+++ b/config/storage.yml
@@ -10,11 +10,11 @@
  amazon:
    service: S3
    #AKIASWCQ4SXSEFC2B5OA
-   access_key_id: AKIASWCQ4SXSEFC2B5OA
+   access_key_id: <%= Rails.application.credentials.dig(:aws, :AKIASWCQ4SXSEFC2B5OA) %>
    #xg44KszIuP7uBniTpPfOyDjOefZkpZ73YMB9zCqE
-   secret_access_key: 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
+   secret_access_key: <%= Rails.application.credentials.dig(:aws, :xg44KszIuP7uBniTpPfOyDjOefZkpZ73YMB9zCqE) %>
    region: eu-central-1
-   bucket: prostogrambucket-<%= Rails.env %>
+   bucket: prostogrambucket
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
